--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-select-dropdown": "^3.4.0"
+    "react-native-select-dropdown": "^3.4.0",
+    "expo-location": "~16.1.0",
+    "expo-camera": "~13.4.4",
+    "expo-updates": "~0.18.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
